@@ -1,5 +1,7 @@
 2015-11-27  Jim Fowler  <jrf@Biblion>
 
+	* Tools/setup.py: make collection into a python package
+
 	* Tools/designer/ui_mainWindow.ui: added second column
 	of buttons
 
